==> michprev/flyhero-esp32/components/IMU/src/MPU6050.cpp <==
#include "MPU6050.h"

esp_err_t MPU6050::i2c_init()
{
    esp_err_t state;

    i2c_config_t conf;
    conf.mode = I2C_MODE_MASTER;
    conf.sda_io_num = GPIO_NUM_5;
    conf.sda_pullup_en = GPIO_PULLUP_DISABLE;
    conf.scl_io_num = GPIO_NUM_18;
    conf.scl_pullup_en = GPIO_PULLUP_DISABLE;
    conf.master.clk_speed = 400000;

    if ((state = i2c_param_config(I2C_NUM_0, &conf)))
        return state;
    if ((state = i2c_driver_install(I2C_NUM_0, conf.mode, 0, 0, 0)))
        return state;

    return ESP_OK;
}

esp_err_t MPU6050::int_init()
{
    esp_err_t state;

    gpio_config_t conf;
    conf.pin_bit_mask = GPIO_SEL_4;
    conf.mode = GPIO_MODE_INPUT;
    conf.pull_up_en = GPIO_PULLUP_DISABLE;
    conf.pull_down_en = GPIO_PULLDOWN_DISABLE;
    conf.intr_type = GPIO_INTR_POSEDGE;

    if ((state = gpio_config(&conf)))
        return state;

    if ((state = gpio_install_isr_service(0)))
        return state;
    if ((state = gpio_isr_handler_add(GPIO_NUM_4, int_handler, NULL)))
        return state;

    return ESP_OK;
}

esp_err_t MPU6050::i2c_write(uint8_t reg, uint8_t data)
{
    esp_err_t state;

    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if ((state = i2c_master_start(cmd)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, this->I2C_ADDRESS_WRITE, true)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, reg, true)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, data, true)))
        goto i2c_error;
    if ((state = i2c_master_stop(cmd)))
        goto i2c_error;

    if ((state = i2c_master_cmd_begin(I2C_NUM_0, cmd, this->I2C_TIMEOUT / portTICK_RATE_MS)))
        goto i2c_error;

    i2c_cmd_link_delete(cmd);

    return ESP_OK;

    i2c_error:

    i2c_cmd_link_delete(cmd);
    return state;
}

esp_err_t MPU6050::i2c_write(uint8_t reg, uint8_t *data, uint8_t data_size)
{
    esp_err_t state;

    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if ((state = i2c_master_start(cmd)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, this->I2C_ADDRESS_WRITE, true)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, reg, true)))
        goto i2c_error;
    if ((state = i2c_master_write(cmd, data, data_size, true)))
        goto i2c_error;
    if ((state = i2c_master_stop(cmd)))
        goto i2c_error;

    if ((state = i2c_master_cmd_begin(I2C_NUM_0, cmd, this->I2C_TIMEOUT / portTICK_RATE_MS)))
        goto i2c_error;

    i2c_cmd_link_delete(cmd);

    return ESP_OK;

    i2c_error:

    i2c_cmd_link_delete(cmd);
    return state;
}

esp_err_t MPU6050::i2c_read(uint8_t reg, uint8_t *data)
{
    esp_err_t state;

    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if ((state = i2c_master_start(cmd)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, this->I2C_ADDRESS_WRITE, true)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, reg, true)))
        goto i2c_error;

    if ((state = i2c_master_start(cmd)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, this->I2C_ADDRESS_READ, true)))
        goto i2c_error;
    if ((state = i2c_master_read_byte(cmd, data, I2C_MASTER_NACK)))
        goto i2c_error;
    if ((state = i2c_master_stop(cmd)))
        goto i2c_error;

    if ((state = i2c_master_cmd_begin(I2C_NUM_0, cmd, this->I2C_TIMEOUT / portTICK_RATE_MS)))
        goto i2c_error;

    i2c_cmd_link_delete(cmd);

    return ESP_OK;

    i2c_error:

    i2c_cmd_link_delete(cmd);
    return state;
}

esp_err_t MPU6050::i2c_read(uint8_t reg, uint8_t *data, uint8_t data_size)
{
    esp_err_t state;

    i2c_cmd_handle_t cmd = i2c_cmd_link_create();

    if ((state = i2c_master_start(cmd)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, this->I2C_ADDRESS_WRITE, true)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, reg, true)))
        goto i2c_error;

    if ((state = i2c_master_start(cmd)))
        goto i2c_error;
    if ((state = i2c_master_write_byte(cmd, this->I2C_ADDRESS_READ, true)))
        goto i2c_error;

    if ((state = i2c_master_read(cmd, data, data_size, I2C_MASTER_LAST_NACK)))
        goto i2c_error;

    if ((state = i2c_master_stop(cmd)))
        goto i2c_error;

    if ((state = i2c_master_cmd_begin(I2C_NUM_0, cmd, this->I2C_TIMEOUT / portTICK_RATE_MS)))
        goto i2c_error;

    i2c_cmd_link_delete(cmd);

    return ESP_OK;

    i2c_error:

    i2c_cmd_link_delete(cmd);
    return state;
}

esp_err_t MPU6050::set_gyro_fsr(gyro_fsr fsr)
{
    if (fsr == GYRO_FSR_NOT_SET)
        return ESP_FAIL;

    if (this->g_fsr == fsr)
        return ESP_OK;

    if (this->i2c_write(this->REGISTERS.GYRO_CONFIG, fsr) == ESP_OK)
    {
        this->g_fsr = fsr;

        switch (this->g_fsr)
        {
            case GYRO_FSR_250:
                this->g_mult = 250;
                break;
            case GYRO_FSR_500:
                this->g_mult = 500;
                break;
            case GYRO_FSR_1000:
                this->g_mult = 1000;
                break;
            case GYRO_FSR_2000:
                this->g_mult = 2000;
                break;
            case GYRO_FSR_NOT_SET:
                return ESP_FAIL;
        }

        this->g_mult /= std::pow(2, this->ADC_BITS - 1);

        return ESP_OK;
    }

    return ESP_FAIL;
}

esp_err_t MPU6050::set_accel_fsr(accel_fsr fsr)
{
    if (fsr == ACCEL_FSR_NOT_SET)
        return ESP_FAIL;

    if (this->a_fsr == fsr)
        return ESP_OK;

    if (this->i2c_write(this->REGISTERS.ACCEL_CONFIG, fsr) == ESP_OK)
    {
        this->a_fsr = fsr;

        switch (this->a_fsr)
        {
            case ACCEL_FSR_2:
                this->a_mult = 2;
                break;
            case ACCEL_FSR_4:
                this->a_mult = 4;
                break;
            case ACCEL_FSR_8:
                this->a_mult = 8;
                break;
            case ACCEL_FSR_16:
                this->a_mult = 16;
                break;
            case ACCEL_FSR_NOT_SET:
                return ESP_FAIL;
        }

        this->a_mult /= std::pow(2, this->ADC_BITS - 1);

        return ESP_OK;
    }

    return ESP_FAIL;
}

esp_err_t MPU6050::set_lpf(lpf_bandwidth lpf)
{
    if (lpf == LPF_NOT_SET)
        return ESP_FAIL;

    if (this->lpf == lpf)
        return ESP_OK;

    if (this->i2c_write(this->REGISTERS.CONFIG, lpf) == ESP_OK)
    {
        this->lpf = lpf;
        return ESP_OK;
    }

    return ESP_FAIL;
}

esp_err_t MPU6050::set_interrupt(bool enable)
{
    return this->i2c_write(this->REGISTERS.INT_ENABLE, enable ? 0x01 : 0x00);
}

void MPU6050::Init()
{
    // init I2C bus including DMA peripheral
    ESP_ERROR_CHECK(this->i2c_init());

    // init INT pin on ESP32
    ESP_ERROR_CHECK(this->int_init());

    // reset device
    ESP_ERROR_CHECK(this->i2c_write(this->REGISTERS.PWR_MGMT_1, 0x80));

    // wait until reset done
    uint8_t tmp;
    do
    {
        this->i2c_read(this->REGISTERS.PWR_MGMT_1, &tmp);
    } while (tmp & 0x80);

    vTaskDelay(100 / portTICK_PERIOD_MS);

    // reset analog devices - should not be needed
    ESP_ERROR_CHECK(this->i2c_write(this->REGISTERS.SIGNAL_PATH_RESET, 0x07));

    // wake up, set clock source PLL with Z gyro axis
    ESP_ERROR_CHECK(this->i2c_write(this->REGISTERS.PWR_MGMT_1, 0x03));

    // do not disable any sensor
    ESP_ERROR_CHECK(this->i2c_write(this->REGISTERS.PWR_MGMT_2, 0x00));

    // check I2C connection
    uint8_t who_am_i;
    ESP_ERROR_CHECK(this->i2c_read(this->REGISTERS.WHO_AM_I, &who_am_i));

    if (who_am_i != 0x68)
        ESP_ERROR_CHECK(ESP_FAIL);

    // disable interrupt
    ESP_ERROR_CHECK(this->set_interrupt(false));

    // set INT pin active high, push-pull; don't use latched mode, fsync nor I2C master aux
    ESP_ERROR_CHECK(this->i2c_write(this->REGISTERS.INT_PIN_CFG, 0x00));

    // disable I2C master aux
    ESP_ERROR_CHECK(this->i2c_write(this->REGISTERS.USER_CTRL, 0x20));

    // set gyro full scale range
#if CONFIG_FLYHERO_IMU_GYRO_FSR_250
    ESP_ERROR_CHECK(this->set_gyro_fsr(GYRO_FSR_250));
#elif CONFIG_FLYHERO_IMU_GYRO_FSR_500
    ESP_ERROR_CHECK(this->set_gyro_fsr(GYRO_FSR_500));
#elif CONFIG_FLYHERO_IMU_GYRO_FSR_1000
    ESP_ERROR_CHECK(this->set_gyro_fsr(GYRO_FSR_1000));
#elif CONFIG_FLYHERO_IMU_GYRO_FSR_2000
    ESP_ERROR_CHECK(this->set_gyro_fsr(GYRO_FSR_2000));
#else
#error "Gyro FSR not set"
#endif

    // set accel full scale range
#if CONFIG_FLYHERO_IMU_ACCEL_FSR_2
    ESP_ERROR_CHECK(this->set_accel_fsr(ACCEL_FSR_2));
#elif CONFIG_FLYHERO_IMU_ACCEL_FSR_4
    ESP_ERROR_CHECK(this->set_accel_fsr(ACCEL_FSR_4));
#elif CONFIG_FLYHERO_IMU_ACCEL_FSR_8
    ESP_ERROR_CHECK(this->set_accel_fsr(ACCEL_FSR_8));
#elif CONFIG_FLYHERO_IMU_ACCEL_FSR_16
    ESP_ERROR_CHECK(this->set_accel_fsr(ACCEL_FSR_16));
#else
#error "Accel FSR not set"
#endif

    // set low pass filter
#if CONFIG_FLYHERO_IMU_HARD_LPF_256HZ
    ESP_ERROR_CHECK(this->set_lpf(LPF_256HZ));
#elif CONFIG_FLYHERO_IMU_HARD_LPF_188HZ
    ESP_ERROR_CHECK(this->set_lpf(LPF_188HZ));
#elif CONFIG_FLYHERO_IMU_HARD_LPF_98HZ
    ESP_ERROR_CHECK(this->set_lpf(LPF_98HZ));
#elif CONFIG_FLYHERO_IMU_HARD_LPF_42HZ
    ESP_ERROR_CHECK(this->set_lpf(LPF_42HZ));
#elif CONFIG_FLYHERO_IMU_HARD_LPF_20HZ
    ESP_ERROR_CHECK(this->set_lpf(LPF_20HZ));
#elif CONFIG_FLYHERO_IMU_HARD_LPF_10HZ
    ESP_ERROR_CHECK(this->set_lpf(LPF_10HZ));
#elif CONFIG_FLYHERO_IMU_HARD_LPF_5HZ
    ESP_ERROR_CHECK(this->set_lpf(LPF_5HZ));
#else
#error "Gyro hardware LPF not set"
#endif

    // set sample rate
#if CONFIG_FLYHERO_IMU_HARD_LPF_256HZ
    ESP_ERROR_CHECK(this->set_sample_rate_divider(7));
#else
    ESP_ERROR_CHECK(this->set_sample_rate_divider(0));
#endif

    vTaskDelay(100 / portTICK_PERIOD_MS);
}

void MPU6050::Read_Raw(Raw_Data &accel, Raw_Data &gyro)
{
    uint8_t data[14];

    ESP_ERROR_CHECK(this->i2c_read(this->REGISTERS.ACCEL_XOUT_H, data, 14));

    accel.x = (data[2] << 8) | data[3];
    accel.y = (data[0] << 8) | data[1];
    accel.z = (data[4] << 8) | data[5];

    gyro.x = -((data[8] << 8) | data[9]);
    gyro.y = -((data[10] << 8) | data[11]);
    gyro.z = (data[12] << 8) | data[13];
}
